# kdiff

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CODE_QUALITY_CERTIFICATE.md  CONTRIBUTING.md  DOCKER_HUB_GUIDE.md  DOCKER_README.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_IT.md  RELEASE_GUIDE.md  docker-entrypoint.sh  install.sh  kdiff-docker  kdiff_cli.py  open-report.sh  publish-docker.sh  pyproject.toml  quality_check.py  rebuild-all-versions.sh  release.sh  release_notes.md  setup.py  test_combinations.sh  test_connectivity_check.sh  test_context_validation.sh  test_unified_param.sh  version-bump.sh
.github/workflows/: build-executables.yaml  codeql.yaml  docker-build.yaml  python-tests.yaml  release.yaml  security-scan.yaml
docs/: INSTALLATION.md  diff_details.md
images/: pippo.py
lib/: __init__.py  compare.py  diff_details.py  normalize.py  report.py  report_md.py
tests/: basic_normalize_test.json  basic_normalize_with_meta.json  run_tests.sh  test_cr_discovery.py  test_kdiff.py  test_parallel.py  test_sidebyside.py
tests/fixtures/: expected_normalize.json  expected_normalize_with_meta.json
