[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdiff"
version = "1.2.0"
description = "Kubernetes cluster comparison tool with intelligent diff detection"
readme = "README.md"
authors = [
    {name = "Mauro Casiraghi"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "kubernetes",
    "k8s",
    "diff",
    "comparison",
    "devops",
    "cluster",
    "kubectl",
    "deployment",
    "infrastructure"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
]

# Nessuna dipendenza esterna (solo stdlib Python)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mabombo/kdiff"
Documentation = "https://github.com/mabombo/kdiff/blob/main/README.md"
Source = "https://github.com/mabombo/kdiff"
"Bug Reports" = "https://github.com/mabombo/kdiff/issues"

[project.scripts]
kdiff = "kdiff_cli:main"

[tool.setuptools]
packages = ["lib"]
include-package-data = true

[tool.setuptools.package-data]
lib = ["*.py"]
